# ibus-rime.AppImage

./: .travis.yml  Dockerfile  README.md  build.sh  describe  ibus_rime.yaml  thirdparty.mk  upload.sh
.github/workflows/: build.yml
AppDir/: AppRun  ibus-engine-rime.desktop  ibus-rime.desktop  rime.xml  rime.xml.in
boost/: CMakeLists.txt
cmake/: FindBoost.cmake  FindLevelDb.cmake  FindRime.cmake
patches/: ibus-rime.patch  librime.patch
patches/ibus-rime/: 0001-patch-build-system.patch  0002-relocatable.patch  0003-my-color-scheme.patch
patches/librime/: 0001-Revert-Fix-build-error-of-deprecated-api-697.patch  0001-Revert-drop-boost-system-stub-library-722.patch  0001-Revert-refactor-replace-std-bind-with-lambda-to-incr.patch  0001-link-boost-mini.patch  0002-Revert-vendor-marisa-717.patch  0002-thirdparty-PIC.patch  0003-build-snappy.patch  charcode-drop-boost-asio.patch  fix.patch  lua-use-std-filesystem.patch  relocatable-plugins.patch
patches/librime-charcode/: 0001-link-boost-mini.patch
patches/librime-lua/: XXX.patch  luaconf.h
patches/opencc/: 0001-relocatable-opencc.patch
patches/patchelf/: adjust_startPage_issue127_commit1cc234fea.patch
patches/plum/: 0001-relocatable-plum.patch
patches/snappy/: add-static.patch
std/: any  filesystem  optional
tools/: exec0.c
